<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hug0albert0.vistas.MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/vistas_para_el_proyecto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="19dp"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toStartOf="@+id/textView4"
        android:onClick="lanzarlogin"
        android:text="@string/login"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="65dp" />

    <Button
        android:id="@+id/btnValidacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnlogin"
        android:layout_alignStart="@+id/btnlogin"
        android:layout_below="@+id/btnlogin"
        android:layout_marginTop="13dp"
        android:onClick="lanzarvalidacion"
        android:text="@string/validacion" />

    <Button
        android:id="@+id/btnCredenciales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnValidacion"
        android:layout_alignStart="@+id/btnValidacion"
        android:layout_below="@+id/btnValidacion"
        android:layout_marginTop="16dp"
        android:onClick="lanzarcredenciales"
        android:text="@string/credenciales" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCredenciales"
        android:layout_alignStart="@+id/btnCredenciales"
        android:layout_below="@+id/btnCredenciales"
        android:layout_marginTop="15dp"
        android:onClick="lanzarRecuperar"
        android:text="@string/recuperar" />

</RelativeLayout>
