<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hug0albert0.vistas.avisos">

    <!-- A RecyclerView with some commonly used attributes -->
    <android.support.v7.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        app:cardBackgroundColor="#e4bfef"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        tools:targetApi="lollipop">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button23"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/button11"
                android:layout_alignBottom="@+id/button11"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@+id/button11"
                android:layout_toStartOf="@+id/button11"
                android:background="@android:color/holo_orange_dark"
                android:elevation="20dp"
                android:text="@string/hola" />

            <Button
                android:id="@+id/button11"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView13"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/textView13"
                android:layout_marginBottom="14dp"
                android:background="@android:color/holo_green_dark"
                android:elevation="20dp"
                android:text="@string/mundo" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/aviso_fechas_de_inscripcion_publicadas"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_alignLeft="@+id/card_view1"
        android:layout_alignStart="@+id/card_view1"
        android:layout_below="@+id/card_view1"
        android:layout_gravity="center"
        android:layout_marginTop="17dp"
        app:cardBackgroundColor="#e4bfef"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        tools:targetApi="lollipop">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="@string/aviso_fechas_de_inscripcion_publicadas"
                android:textSize="18sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/button9"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/button10"
                android:layout_alignBottom="@+id/button10"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@+id/button10"
                android:layout_toStartOf="@+id/button10"
                android:background="@android:color/holo_orange_dark"
                android:elevation="20dp"
                android:text="@string/hola" />

            <Button
                android:id="@+id/button10"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="21dp"
                android:layout_marginRight="21dp"
                android:background="@android:color/holo_green_dark"
                android:elevation="20dp"
                android:text="@string/mundo" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
